# mewcode

./: .gitattributes  .gitignore  AGENTS.md  MEWCODE.md  README.md  checklist.md  config.yaml.example  go.mod  go.sum  main.py  plan.md  pyproject.toml  spec.md  task.md
cmd/mewcode/: main.go  print.go  teammate.go  teammate_test.go
docs/: architecture.md  plan.md  spec.md
docs/01-basic-chat/: checklist.md  task.md
docs/02-tool-system/: checklist.md  plan.md  spec.md  task.md
docs/03-cyberpunk-tui/: checklist.md  plan.md  spec.md  task.md
docs/04-agent-loop/: checklist.md  plan.md  spec.md  task.md
docs/05-system-prompt/: checklist.md  manual-evaluation.md  plan.md  spec.md  task.md
internal/agent/: agent.go  agent_live_test.go  agent_test.go  events.go  skills_test.go  streaming_executor.go
internal/agents/: agent_tool.go  agent_tool_test.go  definition.go  loader.go  loader_test.go  subagent.go  tool_filter.go  tool_filter_test.go  verification_prompt.go
internal/commands/: commands.go  (+3 more)
mewcode/: cancellation.py  cli.py  config.py  errors.py  messages.py  runtime.py  tui.py  turns.py
tests/: test_agent_collector.py  test_agent_control.py  test_agent_events.py  test_agent_run.py  test_agent_scheduler.py  test_agent_session.py  test_cli.py  test_command_tool.py  test_config.py  test_file_tools.py  test_prompting.py  test_providers.py  test_runtime.py  test_search_tools.py  test_sse.py  test_tool_executor.py  test_tool_registry.py  test_tui.py  test_tui_app.py  test_tui_interaction.py  test_tui_metadata.py  test_tui_mode.py  test_tui_plain.py  test_tui_presentation.py  test_tui_widgets.py  test_turns.py  test_workspace.py
(+192 files in other folders)
