[project]
name = "mewcode"
version = "0.1.0"
description = "A command-line AI chat assistant."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.26.0",
    "pathspec>=1.1.1",
    "PyYAML>=6.0",
    "textual>=8.2.8",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.4.0",
    "pytest-textual-snapshot>=1.0.0",
]

[project.scripts]
mewcode = "mewcode.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
